# nba-player-stats-mcp

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  example_usage.py  fix_basketball_reference.py  mcp-config-example.json  push-to-github.sh  pyproject.toml  requirements.txt  test_deep_analytics.py
src/: server.py
tests/: test_integration.py
