[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-player-stats-mcp"
version = "0.2.0"
description = "A Model Context Protocol server for NBA player statistics from basketball-reference.com"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ziyad Mir", email = "ziyadmir@gmail.com"},
]
keywords = ["nba", "basketball", "statistics", "mcp", "sports", "player-stats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "basketball-reference-scraper>=1.0.0",
    "pandas>=1.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/ziyadmir/nba-player-stats-mcp"
"Bug Tracker" = "https://github.com/ziyadmir/nba-player-stats-mcp/issues"
"Documentation" = "https://github.com/ziyadmir/nba-player-stats-mcp#readme"

[project.scripts]
nba-player-stats-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "fix_basketball_reference*"]
exclude = ["tests*"]